--- a/_posts/2015-04-20-blog-post-3.md
+++ b/_posts/2015-04-20-blog-post-3.md
@@ -56,9 +56,8 @@ These are reusable patterns that work across most teams:
 - 💡 **Ideation & strategy** – Brainstorms, plans, feedback  
 - 🤖 **Automation** – Scheduled reports, smart summaries, GPT flows
 
-## Visual Suggestion
 
-A circular infographic with the 6 primitives in the centre, branching into role-specific use cases (Marketing, Product, Finance, Sales).
+Carluve/carluve.github.io/images/post/202504_post_infografia.png
 
 ## Prioritising with Impact vs Effort
 
