--- a/_posts/2015-04-20-blog-post-3.md
+++ b/_posts/2015-04-20-blog-post-3.md
@@ -57,7 +57,7 @@ These are reusable patterns that work across most teams:
 - 🤖 **Automation** – Scheduled reports, smart summaries, GPT flows
 
 
-Carluve/carluve.github.io/images/post/202504_post_infografia.png
+![AI Use Case Infographic](/images/post/202504_post_infografia.png)
 
 ## Prioritising with Impact vs Effort
 
