docs: fix formatting and capitalization in blog post
Correct the capitalization of "Trae.AI" in the image caption and remove redundant headings to improve readability and consistency

--- a/_posts/2025-05-03-blog-post-5.md
+++ b/_posts/2025-05-03-blog-post-5.md
@@ -10,9 +10,6 @@ tags:
   - Code Automation
   - Free Software
 ---
-# Trae.ai: Free AI-Powered IDE for Coding (Deep Dive & Comparison)
-
-## What is Trae.ai?
 
 **Trae.ai** is a free, AI-powered integrated development environment (IDE) created by **ByteDance** (the company behind TikTok). Its goal is to act as a real-time **AI coding assistant** built into the editor, helping developers write, understand, and automate code.
 
@@ -23,7 +20,7 @@ tags:
 - Available for **Windows and macOS** (Linux support not yet available).
 - Interface in English and Simplified Chinese.
 
-![Trae.ai](images/post/2025/20250503-trae.png)
+![Trae.AI](images/post/2025/20250503-trae.png) *[TRAE AI]*
 
 
 ## Why was it launched?
