chore: add new images for 2025 blog posts
Add two new images, `202505_vibecoding.png` and `20250504-modelstrae.png`, to the `images/post/2025` directory for upcoming blog posts.

--- a/_posts/2025-05-03-blog-post-5.md
+++ b/_posts/2025-05-03-blog-post-5.md
@@ -20,7 +20,7 @@ tags:
 - Available for **Windows and macOS** (Linux support not yet available).
 - Interface in English and Simplified Chinese.
 
-![Trae.AI](images/post/2025/20250503-trae.png) *[TRAE AI]*
+![Trae.AI](/images/post/2025/20250503-trae.png) *[TRAE AI]*
 
 
 ## Why was it launched?
@@ -32,7 +32,7 @@ Trae.ai addresses two key problems:
 
 ByteDance launched Trae as a **completely free and unlimited tool**, aiming to democratize AI-assisted coding and compete in this fast-growing space.
 
-![Pricing](images/post/2025/202503_pricingtrae.png)
+![Pricing](/images/post/2025/202503_pricingtrae.png)
 ---
 
 ## Differences from *Vibe Coding*
@@ -47,6 +47,7 @@ ByteDance launched Trae as a **completely free and unlimited tool**, aiming to d
 
 Trae.ai takes *vibe coding* to the next level by embedding the AI assistant directly into the coding workflow, with full contextual awareness and smart editing capabilities.
 
+![DiagramVibeCoding](/images/post/2025/202505_vibecoding.png)
 📷 **[Image Placeholder #3: Diagram of “vibe coding” vs. embedded assistant in Trae.ai]**
 
 ---
@@ -66,6 +67,8 @@ All of this is available **without API setup or extra costs**. The AI can:
 - Refactor functions or entire files.
 - Provide inline help and explanations.
 
+
+![DiagramVibeCoding](/images/post/2025/20250504-modelstrae.png)
 ---
 
 ## How is it free?
